--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Melody example: chatting</title>
   <link rel="icon" type="image/png" href="___INTERNAL/static/favicon.png" />
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
   <script src="//unpkg.com/mithril/mithril.js"></script>
   <!-- <script src="___INTERNAL/static/app.js"></script> -->
@@ -10,13 +11,14 @@
 
 <body>
   <center>
-    <h3>Chat</h3>
+    <h3>Its me, pablo</h3>
+    <div id="mithril" />
   </center>
 
   <script>
     var url = "ws://" + window.location.host + "/___INTERNAL/ws";
     var ws = new WebSocket(url);
-    var root = document.body
+    var root = document.getElementById("mithril")
 
     var now = function () {
       var iso = new Date().toISOString();
@@ -107,7 +109,7 @@
         state.chartIdx++
       },
       view: function () {
-        var children = [m("button", { onclick: this.addChart }, "New chart")]
+        var children = [m("button", { class: "bg-blue hover:bg-blue-dark text-white font-bold py-2 px-4 rounded-full", onclick: this.addChart }, "New chart")]
         state.charts.forEach(c => {
           children.push(m(ChartInstance, {}, c))
         });
